# veritas_os

./: .coverage  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ANALYSIS_INDEX.md  CLAUDE.md  CODE_IMPROVEMENT_SUMMARY_JP.md  CODE_REVIEW_2025.md  CODE_REVIEW_2026_02_11.md  CODE_REVIEW_2026_02_12.md  CODE_REVIEW_2026_02_12_AGENT.md  CODE_REVIEW_2026_02_13_AGENT_DETAILED_JP.md  CODE_REVIEW_FULL_2026_02_08.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_STATUS.md  CONTRIBUTING.md  COVERAGE_REPORT.md  Dockerfile  Dockerfile.verifier  FRONTEND_REVIEW.md  LARGE_FILE_REVIEW.md  LICENSE  Makefile  NOTICE  README ENGLISH.md  README.md  README_JP.md  README_UI.md  REPOSITORY_REVIEW.md  REPOSITORY_REVIEW_2026-04-07.md  REPOSITORY_STRUCTURE_ANALYSIS.md  REVIEW_CURRENT_IMPROVEMENTS_2026-03-30.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  THIRD_PARTY_NOTICES  TRADEMARKS  TYPE_CONSISTENCY_REPORT.md  (+11 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
alembic/: env.py  script.py.mako
config/: test_warning_allowlist.json
configs/: debate_safety_policy.example.yaml
docs/: AGI_BENCH_INTEGRATION_GUIDE.md  BACKEND_PARITY_COVERAGE.md  BILINGUAL_RULES.md  COVERAGE_AFTER_TEST_HARDENING.md  COVERAGE_REPORT.md  DEPLOYMENT_COMPLETE.md  DOCUMENTATION_MAP.md  EXTERNAL_AUDIT_READINESS.md  INDEX.md  OPERATIONAL_READINESS_RUNBOOK.md  PATH_MIGRATION.md  PRODUCTION_VALIDATION.md  RELEASE_PROCESS.md  REVIEWER_ENTRYPOINT.md  RUNTIME_DATA_POLICY.md  RUNTIME_PATHS.md  bench_summary.md  ci_no_fail_prompt.md  code-review-2026-03-24.md  code_review_2026_03_23.md  database-migrations.md  demo-3min-script.md  dependency-profiles.md  env-reference.md  eu_ai_act_compliance_review.md  fail_safe.md  fuji_eu_enterprise_strict_usage.md  fuji_gate_safety.md  governance_3min_demo.md  governance_artifact_lifecycle.md  legacy-path-cleanup.md  live-postgresql-validation.md  metrics.md  migration-guide.md  module_responsibilities.md  policy_as_code.md  postgresql-drill-runbook.md  postgresql-production-guide.md  review-frontend-backend-consistency.md  reviewer_validation_report_template.md  (+7 more)
examples/: aml_kyc_regulated_action_path.py
frontend/: .env.development  .eslintrc.json  FRONTEND_REVIEW.md  middleware.test.ts  middleware.ts  next.config.mjs  next.config.test.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
licenses/: BUSL-1.1-template.txt
schemas/: evidence_bundle_validation_report.schema.json  evidence_bundle_verification_result.schema.json  reviewer_handoff_package_validation_report.schema.json  reviewer_handoff_quickstart_command_report_validation_report.schema.json  reviewer_handoff_quickstart_command_validation_report.schema.json  reviewer_handoff_review_result.schema.json  reviewer_handoff_review_result_report_validation_report.schema.json  reviewer_handoff_review_result_validation_report.schema.json  trusted_public_key_provenance_receipt.schema.json  trusted_public_key_provenance_result_validation_report.schema.json  trusted_public_key_provenance_review_sample_manifest.schema.json  trusted_public_key_provenance_validation_report.schema.json
scripts/: backup_postgres.sh  check_bilingual_docs.py  check_governance_observation.py  compose_validation.sh  demo_mission_audit_workflow.sh  drill_postgres_recovery.sh  generate_observe_mode_demo_snapshot.py  generate_release_readiness_report.py  generate_staged_readiness_report.py  live_provider_validation.sh  production_validation.sh  reset_repo_runtime.py  restore_postgres.sh  run_aml_kyc_poc_fixture.py  run_aml_kyc_regulated_action_path.py  run_financial_poc.py  take_frontend_snapshot.sh  validate_governance_observation_fixture.sh  validate_reviewer_entrypoint.sh
spec/: LICENSE  continuation.schema.json  continuation_runtime_overview.md
tests/: test_aml_kyc_poc_fixture_runner.py  test_bind_admissibility.py  test_check_bilingual_docs.py  test_continuation_enforcement.py  test_continuation_enforcement_audit.py  test_continuation_enforcement_integration.py  test_continuation_eval_harness.py  test_continuation_golden.py  test_continuation_integration.py  test_continuation_receipt_enrichment.py  test_continuation_receipt_first.py  test_continuation_replay.py  test_continuation_revalidator.py  test_critique_ensure_min_items_padding.py  test_critique_risk_value_balance.py  test_debate_json_extract_helpers.py  test_debate_safety_heuristics.py  test_pipeline_critique_pad_findings_single_pass.py  test_pnpm_audit_gate.py  test_release_readiness_proof_summary.py  test_trustlog_posture.py  test_wat_api.py  test_wat_observability_contract.py
veritas_os/: .gitignore  README ENGLISH.md  README.md  README_JP.md  WEEKLY_TASKS.md  coverage.json  governance_store.py  requirements.txt  (+1 more)
veritas_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1778 files in other folders)
