[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veritas-os"
version = "2.0.0"
description = "Auditable Decision OS for LLM Agents"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Takeshi Fujishita", email = "veritas.fuji@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
dependencies = [
  # --- API / Server (required) ---
  "fastapi==0.121.0",
  "uvicorn==0.30.3",
  "pydantic==2.8.2",
  "python-dotenv==1.0.1",
  "orjson==3.11.6",
  "PyYAML==6.0.1",
  "jinja2==3.1.6",
  # --- LLM integration (required) ---
  "openai==1.51.0",
  "httpx==0.27.2",
  # --- Numerical core (required by memory subsystem) ---
  "numpy==1.26.4",
]

# ---------------------------------------------------------------------------
# Optional dependency groups ("extras")
#
# Install profiles:
#   pip install .                  # core-only — API server + primary LLM
#   pip install ".[ml]"            # + sentence-transformers / scikit-learn
#   pip install ".[reports]"       # + matplotlib / pandas / PDF tooling
#   pip install ".[anthropic]"     # + Anthropic LLM provider
#   pip install ".[system]"        # + psutil / trio
#   pip install ".[full]"          # everything (CI / Docker default)
# ---------------------------------------------------------------------------
[project.optional-dependencies]
ml = [
  "scikit-learn==1.5.2",
  "sentence-transformers==5.3.0",
  "transformers==5.5.0",
]
reports = [
  "matplotlib==3.9.2",
  "pandas==2.2.3",
  "pdfplumber==0.11.9",
  "pdfminer.six==20251230",
]
anthropic = [
  "anthropic==0.34.2",
]
system = [
  "psutil==6.0.0",
  "trio==0.26.2",
  "starlette==0.49.1",
]
observability = [
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "opentelemetry-exporter-otlp>=1.20",
  "prometheus-client>=0.20",
]
signing = [
  "cryptography==46.0.7",
]
full = [
  "veritas-os[ml,reports,anthropic,system,observability,signing]",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/veritasfuji-japan/veritas_os"
Repository = "https://github.com/veritasfuji-japan/veritas_os"
Issues = "https://github.com/veritasfuji-japan/veritas_os/issues"

[tool.setuptools.packages.find]
include = ["veritas_os*"]

[tool.setuptools.package-data]
veritas_os = [
  "benchmarks/*.yaml",
  "policies/*.yaml",
  "prompts/*.txt",
  "sample_data/memory/*.jsonl",
  "templates/**/*.txt",
]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
  "ignore:invalid escape sequence.*:SyntaxWarning:sentence_transformers\\..*",
]
markers = [
  "asyncio: mark test as asynchronous and execute via asyncio.run",
  "slow: mark test as slow or external-I/O dependent",
  "production: production-like validation requiring real services",
  "smoke: lightweight smoke tests for deployment verification",
  "external: tests that depend on external network services",
  "unit: 単体テスト",
  "integration: 統合テスト",
  "scenario: ビジネスシナリオテスト",
  "eu_ai_act: EU AI Act コンプライアンス関連",
]
